# cjdns-windows-updater

./: CMakeLists.txt  Doxyfile  README-crossbuild  README.md  c_downloader.cpp  c_downloader.hpp  c_http_downloader.cpp  c_http_downloader.hpp  c_sha512_ext.hpp  c_updater.cpp  c_updater.hpp  c_url_downloader.cpp  c_url_downloader.hpp  i_downloader.cpp  i_downloader.hpp  main.cpp  tigu_up_main.cpp
gui/updater-gui/: CMakeLists.txt  c_lang_manager.cpp  c_lang_manager.h  c_settings.cpp  c_settings.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings_window.cpp  settings_window.hpp  settings_window.ui  ui_mainwindow.h  ui_settings_window.h  updater-gui.pro
gui/updater-gui/language/: EN.qm  PL.qm
sha_src/: sha512.cpp  sha512.hpp
src/: CMakeLists.txt  c_cjdns_updater.cpp  c_cjdns_updater.hpp  c_http_downloader.cpp  c_http_downloader.hpp  c_tiguup_updater.cpp  c_tiguup_updater.hpp  c_updater.cpp  c_updater.hpp  c_windows_reg.cpp  c_windows_reg.hpp  c_windows_service.cpp  c_windows_service.hpp  c_windows_utility.cpp  i_downloader.hpp
win-utility-lib/: CMakeLists.txt  c_windows_reg.cpp  c_windows_reg.hpp  c_windows_service.cpp  c_windows_service.hpp  c_windows_utility.cpp  c_windows_utility.hpp
